--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="leaflet.js"></script>
     <script src="jquery-3.2.0.min.js"></script>
     <script src="numeral.js"></script>
-    <title>Leaflet</title>
+    <title>Bài tập lớn HTTTDL</title>
     <style>
         #map123 {
             height: 100vh;
