--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="leaflet.js"></script>
     <script src="jquery-3.2.0.min.js"></script>
+    <script src="leaflet-providers.js"></script>
     <script src="numeral.js"></script>
     <title>Bài tập lớn HTTTDL</title>
     <style>
