thiet lap lai project

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="leaflet.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/L.Control.Pan.css">
     <script src="leaflet.js"></script>
-    <script src="jquery-3.2.0.min.js"></script>
-    <script src="leaflet-providers.js"></script>
-    <script src="numeral.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/leaflet-providers.js"></script>
+    <script src="js/numeral.js"></script>
+    <script src="js/L.Control.Pan.js"></script>
     <title>Bài tập lớn HTTTDL</title>
     <style>
         #map123 {
