--- a/index.html
+++ b/index.html
@@ -27,7 +27,22 @@
 </head>
 
 <body>
-    <div class="row" style="padding: 2%">
+    <div id="divLogin" class="row" style="display: block; margin-top: 20%">
+        <div class="col-md-3"></div>
+        <div class="col-md-6" style="text-align: center;">
+            <div class="row">
+                <label for="#ipUsername" style="margin-bottom: 1%"> Tài khoản: </label> <br>
+                <input type="text" class="form-control" id="ipUsername" style="margin-bottom: 1%"> <br>
+                <label for="#ipPassword" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
+                <input type="text" id="ipPassword" class="form-control" style="margin-bottom: 1%"> <br>
+                <button class="btn btn-primary" id="btnLogin"> Đăng nhập</button>
+            </div>
+        </div>
+        <div class="col-md-3"></div>
+    </div>
+
+    <div id="divIndex" class="row" style="padding: 2%; display: none;">
+        <div id="idLogin" style="display: none;"></div>
         <div class="col-md-3">
             <div class="row" style="text-align: center; margin-bottom: 5%">
                 <h3>Tình hình bầu cử tại Việt Nam</h3>
