--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <label for="ipUsername" style="margin-bottom: 1%"> Tài khoản: </label> <br>
                 <input type="text" class="form-control" id="ipUsername" style="margin-bottom: 1%; text-align: center"> <br>
                 <label for="ipPassword" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
-                <input type="text" id="ipPassword" class="form-control" style="margin-bottom: 1%; text-align: center"> <br>
+                <input type="password" id="ipPassword" class="form-control" style="margin-bottom: 1%; text-align: center"> <br>
                  <div class="form-group" style="margin-bottom: 7%; display: none">
                   <label for="sel1">Chọn tỉnh / thành phố</label>
                   <select class="form-control" id="sel1" style=" text-align: center"></select>
