--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/L.Control.Pan.css">
     <script src="leaflet.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/leaflet-providers.js"></script>
     <script src="js/numeral.js"></script>
     <script src="js/L.Control.Pan.js"></script>
@@ -36,10 +37,6 @@
                 <input type="text" class="form-control" id="ipUsername" style="margin-bottom: 1%; text-align: center"> <br>
                 <label for="ipPassword" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
                 <input type="password" id="ipPassword" class="form-control" style="margin-bottom: 1%; text-align: center"> <br>
-                 <div class="form-group" style="margin-bottom: 7%; display: none">
-                  <label for="sel1">Chọn tỉnh / thành phố</label>
-                  <select class="form-control" id="sel1" style=" text-align: center"></select>
-                </div>
                 <button class="btn btn-primary" id="btnLogin" style="margin-right: 5%"> Đăng nhập </button>
                 <button class="btn btn-primary" id="btnSignup"> Đăng ký </button>
             </div>
@@ -100,6 +97,39 @@
             <div id="map123"></div>
         </div>
     </div>
+
+    <div id="modalSignup" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+      
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Đăng ký</h4>
+            </div>
+            <div class="modal-body">
+                <label for="ipUsernameSignUp" style="margin-bottom: 1%"> Tài khoản: </label> <br>
+                <input type="text" class="form-control" id="ipUsernameSignUp" style="margin-bottom: 1%; text-align: center"> <br>
+                <label for="ipPasswordSignUp" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
+                <input type="password" id="ipPasswordSignUp" class="form-control" style="margin-bottom: 1%; text-align: center"> <br>
+                <label for="slCitySignUp" style="margin-bottom: 1%"> Chọn tỉnh/Thành phố: </label> <br>
+                <select class="form-control" id="slCitySignUp" style=" text-align: center">
+                </select> <br>
+                <label for="slGenderSignUp" style="margin-bottom: 1%"> Giới tính: </label> <br>
+                <select class="form-control" id="slGenderSignUp" style=" text-align: center">
+                    <option value="1">Nam</option>
+                    <option value="0">Nữ</option>
+                </select>
+                <label for="slBirthdaySignUp" style="margin-bottom: 1%"> Năm sinh: </label> <br>
+                <select class="form-control" id="slBirthdaySignUp" style=" text-align: center"></select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="btnSignUpForm">Đăng ký</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+      
+        </div>
+      </div>
 
     <script src="api.js"></script>
     <script src="index.js"></script>
