--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <label>Mr. Nguyễn Đức Thắng</label>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/vote1.jpg" width="100px" height="100px" alt="">
+                    <img src="images/vote2.png" width="100px" height="100px" alt="">
                     <label>Mr. Đinh Việt Cường</label>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             <label class='label label-success' style="display: inline-block; width:50px; height:25px"></label>
                         </div>
                         <div class="col-md-6">
-                            <img onclick="voteFunc(2)" style="" id="imgCuong" src="images/vote1.jpg" width="100px" height="100px" alt="">
+                            <img onclick="voteFunc(2)" style="" id="imgCuong" src="images/vote2.png" width="100px" height="100px" alt="">
                             <label>Mr. Đinh Việt Cường</label> <br>
                             <label class='label label-danger' style="display: inline-block; width:50px; height:25px"></label>
                         </div>
