--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/numeral.js"></script>
     <script src="js/L.Control.Pan.js"></script>
     <script src="js/highcharts.src.js"></script>
-    <title>Gương mặt khả ái</title>
+    <title>Vietnam Idol</title>
     <style>
         #map123 {
             height: 100vh;
@@ -49,7 +49,7 @@
         <div id="idLogin" style="display: none;"></div>
         <div class="col-md-3">
             <div class="row" style="text-align: center; margin-bottom: 5%">
-                <h3>Gương mặt khả ái</h3>
+                <h3>Việt Nam ai đồ</h3>
                 <h4 id="province">Toàn quốc</h4>
             </div>
 
