--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4" style="text-align: center;">
             <div class="row">
-                <img src="https://image.flaticon.com/icons/svg/190/190600.svg" style="width: 50%; height: 50%; display: block; margin: 10% auto">
+                <img src="images/logo.svg" style="width: 50%; height: 50%; display: block; margin: 10% auto">
                 <label for="ipUsername" style="margin-bottom: 1%"> Tài khoản: </label> <br>
                 <input type="text" class="form-control" id="ipUsername" style="margin-bottom: 1%; text-align: center"> <br>
                 <label for="ipPassword" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
@@ -46,6 +46,7 @@
     </div>
 
     <div id="divIndex" class="row" style="padding: 2%; display: none;">
+        <button id="btnDangXuat" class="btn btn-danger">Đăng xuất</button>
         <div id="idLogin" style="display: none;"></div>
         <div class="col-md-3">
             <div class="row" style="text-align: center; margin-bottom: 5%">
