fix login + vote

--- a/admin.html
+++ b/admin.html
@@ -31,7 +31,7 @@
                 <input type="text" class="form-control" id="ipUsername" style="margin-bottom: 1%; text-align: center"> <br>
                 <label for="ipPassword" style="margin-bottom: 1%"> Mật khẩu: </label> <br>
                 <input type="password" id="ipPassword" class="form-control" style="margin-bottom: 1%; text-align: center"> <br>
-                <button class="btn btn-primary" id="btnLogin" style="margin-right: 5%"> Đăng nhập </button>
+                <button class="btn btn-primary" id="btnLogin"> Đăng nhập </button>
             </div>
         </div>
         <div class="col-md-4"></div>
