--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div id="divIndex" class="row" style="display: none;">
         <div id="idLogin" style="display: none;"></div>
-        <div id="left" class="col-md-3" style="text-align: center; padding-right:0">
+        <div id="left" class="col-md-4" style="text-align: center; padding-right:0">
             <div class="row" style="text-align: center; margin-bottom: 5%">
                 <h3>Việt Nam ai đồ</h3>
                 <h4 id="province">Toàn quốc</h4>
@@ -126,9 +126,9 @@
                     <br>
                     <br>
             </div>
-            <div style="text-align: center"><button id="btnDangXuat" class="btn btn-danger">Đăng xuất</button></div>
+            <div class="row" style="text-align: center"><button id="btnDangXuat" class="btn btn-danger">Đăng xuất</button></div>
         </div>
-        <div class="col-md-9" style="padding:0;">
+        <div class="col-md-8" style="padding:0;">
             <div id="map123"></div>
         </div>
     </div>
