--- a/admin.html
+++ b/admin.html
@@ -57,6 +57,7 @@
 
     <div id="divUsers" class="row" style="padding: 2%; display: none;">
         <h3 id="h3divUser"></h3>
+        <button class="btn btn-primary" id="btnBack">Quay lại</button>
         <div hidden id="idTinhUser"></div>
         <div hidden id="tenTinh"></div>
         <div id="tableListUser_wrapper" class="dataTables_wrapper no-footer">
